--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,13 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <style type="text/css">
       body {
         margin: 10px;
         white-space: nowrap;
+        width: 300px;
       }
 
       h1 {
@@ -22,30 +25,26 @@
         display: flex;
         justify-content: space-between;
       }
+      table {
+        margin-top: 1em;
+        width: 100%;
+      }
     </style>
-
     <!--
       - JavaScript and HTML must be in separate files: see our Content Security
       - Policy documentation[1] for details and explanation.
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
     -->
+    <script src="helpers.js"></script>
     <script src="popup.js"></script>
   </head>
 
   <body>
     <h1>Background Color Changer</h1>
     <p id="url"></p>
-    <div id="container">
-      <span>Choose a color</span>
-      <select id="dropdown">
-        <option selected disabled hidden value=''></option>
-        <option value="white">White</option>
-        <option value="pink">Pink</option>
-        <option value="green">Green</option>
-        <option value="yellow">Yellow</option>
-      </select>
-    </div>
-    <button id="button">Click</button>
+    <strong id="service-message"></strong>
+    <button id="button" class="pure-button pure-button-primary">Click</button>
+    <div id="container"></div>
   </body>
 </html>
