Change application name

--- a/popup.html
+++ b/popup.html
@@ -41,7 +41,7 @@
   </head>
 
   <body>
-    <h1>Background Color Changer</h1>
+    <h1>Url Parser</h1>
     <p id="url"></p>
     <strong id="service-message"></strong>
     <button id="button" class="pure-button pure-button-primary">Click</button>
