feat(popup): add logic

--- a/popup.html
+++ b/popup.html
@@ -19,9 +19,9 @@
   </head>
 
   <body>
-    <h1>Url Parser</h1>
+    <h3>Url Parser</h3>
     <p id="url"></p>
-    <button id="button" class="pure-button pure-button-primary">Click</button>
     <div id="container"></div>
+    <button id="button" class="update-button pure-button pure-button-primary">Update url</button>
   </body>
 </html>
