fix(popup): remove button when no url can be parse

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>UPA - The Url Parser</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="customs.css">
     <script src="popup.js"></script>
   </head>
 
@@ -11,6 +10,5 @@
     <h3>Url Parser</h3>
     <p id="url"></p>
     <div id="container"></div>
-    <button id="button" class="update-button pure-button pure-button-primary">Update url</button>
   </body>
 </html>
