Fix: popup html title

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
   <body>
     <h3 class="clearfix">
-      <span class="title">URL Parser</span>
+      <span class="title">UPA - The URL Parser</span>
       <span id="buttons" class="buttons">
         <button
           id="refresh"
